# cropmapping

./: README.md  pyproject.toml
cmap/: README.md  cli.py  main.py
cmap/data/: README.md  chunk.py  dataset.py  modules.py  sql.py  transforms.py
cmap/ml/: README.md  autoencoders.py  classifiers.py  decoders.py  encoders.py  losses.py  models.py  modules.py
cmap/ml/embeddings/: bands.py  position.py
cmap/utils/: README.md  attention.py  chunk.py  constants.py  distributions.py  merge.py  ndvi.py  posgres.py  postgres.py  temps.py
configs/: README.md  docker-compose.yml  init.sql  rpg_codes.yml
configs/docker/: init.sql
configs/runs/: classifier.yml  clf_fra_19_21.yml  finetuning.yml  fra_19_21.yml
configs/runs/amable/: data.yml  finetuning.yml  finetuning_chunks.yml  finetuning_fr_19_21.yml  finetuning_small.yml  finetuning_sql.yml  pretrain.yml  pretrain_chunks.yml  supervised.yml  temp_finetuning.yml  trainer.yml
src/: data.py  dataset.py  main.py
src/data/: data.py  dataset.py  modules.py
src/ml/: models.py  systems.py
src/ml/embeddings/: bands.py  position.py
src/utils/: chunk.py
