[tool.poetry]
name = "Crop Mapping"
version = "0.1.0"
description = "Research repository for time series classification on geo data"
authors = ["Christopher Salotti <christopher.salotti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
pytorch-lightning = "^2.1.1"
transformers = "^4.35.0"
pandas = "^2.1.3"
pyarrow = "^14.0.1"
jsonargparse = {extras = ["signatures"], version = "^4.27.0"}
lightning = {extras = ["extra"], version = "^2.1.2"}
tensorboard = "^2.15.1"
torchmetrics = "^1.2.0"
pyyaml = "^6.0.1"
seaborn = "^0.13.0"
dask = "^2023.11.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.11.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
